<resources>
    <string name="app_name">Klara</string>
    <string name="main_image_logo_content_description">Main image logo</string>
    <string name="btn_range_text">Асортимент</string>
    <string name="btn_patties_text">Наші пиріжкові</string>
    <string name="btn_vacancy_text">Вакансії</string>
    <string name="main_phone_number">0 800 30 28 77</string>
    <string name="main_email_value">info@klara.ua</string>
    <string name="bnv_menu_item_all_caption">Все</string>
    <string name="main_activity_toolbar_caption">Тітка Клара</string>
    <string name="product_list_activity_toolbar_title">Асортимент</string>
    <string name="coffee_shops_activity_toolbar_title">Наші пиріжкові</string>
    <string name="web_site_main_reference">https://klara.ua/</string>
    <string name="vacancy_list_activity_toolbar_title">Вакансії</string>
    <string name="btn_get_vacancy_text">Натисніть, щоб відгукнутись на вакансію</string>
    <string name="et_vacancy_response_fragment_name_hint">Ваше ім\'я</string>
    <string name="et_vacancy_response_fragment_email_hint">Ваш e-mail</string>
    <string name="et_vacancy_response_fragment_comment_hint">Коментар</string>
    <string name="btn_vacancy_response_fragment_caption">Відправити</string>
    <string name="input_error_vacancy_response_fragment">*Поле необхідно заповнити</string>
</resources>
