<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="vacancyResponseViewModel"
            type="com.katrenich.alex.klara.vacancyScreen.viewmodel.VacancyResponseViewModel" />

        <variable
            name="vacancyResponseFragment"
            type="com.katrenich.alex.klara.vacancyScreen.ui.VacancyResponseFragment" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatImageButton
            android:id="@+id/btn_hide_vacancy_response_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:onClick="@{vacancyResponseFragment::hideView}"
            android:src="@drawable/ic_arrow_down"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_vacancy_response_fragment_name"
            style="@style/VacancyResponseFragmentET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_vacancy_response_fragment_name_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_hide_vacancy_response_fragment" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_vacancy_response_fragment_email"
            style="@style/VacancyResponseFragmentET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_vacancy_response_fragment_email_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_vacancy_response_fragment_name" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_vacancy_response_fragment_comment"
            style="@style/VacancyResponseFragmentET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_vacancy_response_fragment_comment_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_vacancy_response_fragment_email" />

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_send_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:onClick="@{vacancyResponseFragment::hideView}"
            android:text="@string/btn_vacancy_response_fragment_caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_vacancy_response_fragment_comment" />

    </android.support.constraint.ConstraintLayout>

</layout>